--- a/store.html
+++ b/store.html
@@ -6,8 +6,8 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Veikals</title>
-  <link rel="stylesheet" href="style/flexboxgrid.css">
-  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="./src/style/flexboxgrid.css">
+  <link rel="stylesheet" href="./src/style/style.css">
 </head>
 <body>
 <div class="wrapper">
@@ -108,6 +108,6 @@
   </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.1/moment.min.js"></script>
-<script src="script/script.js"></script>
+<script src="dist/bundle.js"></script>
 </body>
 </html>
