--- a/camus.html
+++ b/camus.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="row middle-xs">
         <div class="col-xs-3">
-          <img src="images/logo.svg" alt="" class="header__logo">
+          <img src="src/images/logo.svg" alt="" class="header__logo">
         </div>
         <div class="col-xs-9">
           <div class="row end-xs">
@@ -95,7 +95,7 @@
             </p>
           </div>
           <div class="col-xs-4">
-            <img src="images/albertcamus.jpg" alt="Albērs Kamī" width="394">
+            <img src="src/images/albertcamus.jpg" alt="Albērs Kamī" width="394">
           </div>
         </div>
         <div class="row">
@@ -112,7 +112,7 @@
       <div class="container">
         <div class="row center-xs">
           <div class="col-xs-12">
-            <img src="images/logo.svg" alt="webpack" class="footer__logo">
+            <img src="src/images/logo.svg" alt="webpack" class="footer__logo">
           </div>
         </div>
       </div>
