--- a/store.html
+++ b/store.html
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="row middle-xs">
           <div class="col-xs-3">
-            <img src="images/logo.svg" alt="" class="header__logo">
+            <img src="src/images/logo.svg" alt="" class="header__logo">
           </div>
           <div class="col-xs-9">
             <div class="row end-xs">
@@ -89,7 +89,7 @@
       <div class="container">
         <div class="row center-xs">
           <div class="col-xs-12">
-            <img src="images/logo.svg" alt="webpack" class="footer__logo">
+            <img src="src/images/logo.svg" alt="webpack" class="footer__logo">
           </div>
         </div>
       </div>
